# dbrx-multimodel-deployment-demo

./: CLAUDE.md  databricks.yml  pyproject.toml  requirements.txt
docs/: scaling-architecture-v2.md
notebooks/: demo.ipynb
prds/: PRD_demo.md  PRD_register_multimodel_deployment.md
presentations/: multimodel-architecture-diagram.html  multimodel-mlflow-architecture-v2.html  multimodel-mlflow-architecture.html  multimodel-serving-architecture-diagram-v3.html
resources/: clusters.yml  jobs.yml
scripts/: init.sh
src/: main.py
src/dbrx_multimodel_registration/adapters/: __init__.py
src/dbrx_multimodel_registration/adapters/data_generation/: __init__.py  spark.py
src/dbrx_multimodel_registration/adapters/logging/: __init__.py  collapsed_sku.py  nested_model.py  region_artifact_only.py  uc_table.py
src/dbrx_multimodel_registration/adapters/serving/: __init__.py  lakebase.py
src/dbrx_multimodel_registration/adapters/storage/: __init__.py  delta_run_plan.py  parquet_bundle.py
src/dbrx_multimodel_registration/adapters/training/: __init__.py  reference_model.py  simulator.py
src/dbrx_multimodel_registration/domains/: __init__.py  entities.py
src/dbrx_multimodel_registration/ports/: __init__.py
src/dbrx_multimodel_registration/ports/data_generation/: __init__.py  data_generator.py
src/dbrx_multimodel_registration/ports/logging/: __init__.py  strategy.py
src/dbrx_multimodel_registration/ports/storage/: __init__.py  parent_run_artifact_writer.py  (+1 more)
src/dbrx_multimodel_registration/utils/: __init__.py  helpers.py  scaling.py
tests/: test_bundle_write.py
(+3 files in other folders)
