[project]
name = "dbrx-multimodel-deployment-demo"
version = "0.1.0"
description = "Large-scale MLflow registration of forecasting models on Databricks"
requires-python = ">=3.11"
dependencies = [
    "mlflow-skinny>=2.18",
    "faker>=30.0",
    "pyspark>=3.5",
    "databricks-sdk>=0.40",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "numpy>=2.0",
    "psycopg[binary]",
    "psycopg-pool",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbrx_multimodel_registration"]
